@@ -42,6 +42,7 @@ importFrom(stats,chisq.test)
 importFrom(stats,cov)
 importFrom(stats,dnorm)
 importFrom(stats,lm)
+importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
